--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,22 +2,8 @@
 @import '~bootstrap/scss/bootstrap';
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.form-control:focus {
-  border-color: #ff512f;
-  border-width: 0.1rem;
-  //box-shadow:0000.1rem#ff512fbox-shadow: none !important;
-}
-
-.bg-dark {
-  background-color: rgb(25, 25, 25) !important;
-}
-
-.btn-gradient {
-  background-image: linear-gradient(to right, #ff512f 0%, #dd2476 100%);
-  border: none;
-  color: #fff;
+  font-family: Inter var, ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
+    Noto Color Emoji;
 }
